--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-version: "0001--11-Sep-2022"
+version: "0004--25-Sep-2022"
+copyright: "2022"
 author: "Sasha Nabila Fortuna"
 title: "OS222: Operating Systems 2022-2"
 githublink: "https://github.com/cinvetsin/os222"
